--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Yadavm</string>
+    <string name="app_name">Yadav Milk Dairy</string>
     <string name="cart_card_hint">0</string>
 
 </resources>
